Update name to walking tour

--- a/plugin.ini
+++ b/plugin.ini
@@ -1,5 +1,5 @@
 [info]
-name="Mall Map"
+name="Walking Tour"
 author="Alec Wang and Austin Mason"
 description="A plugin to add walking tours for the Medieval Rome From Reason OCS at Carleton College"
 license="GPLv3"
