--- a/plugin.ini
+++ b/plugin.ini
@@ -9,4 +9,4 @@ version="0.1-dev"
 omeka_minimum_version="2.0"
 omeka_target_version="2.6"
 tags=""
-required_plugins="Geolocation,SimpleVocab"
+required_plugins="Geolocation"
