--- a/routes.ini
+++ b/routes.ini
@@ -1,22 +1,22 @@
 [routes]
 tours.route = "tours/:action"
-tours.defaults.module = mall-map
+tours.defaults.module = walking-tour
 tours.defaults.controller = tours
 tours.defaults.action = "browse"
 
 tourAction.route = "tours/:action/:id"
-tourAction.defaults.module = mall-map
+tourAction.defaults.module = walking-tour
 tourAction.defaults.controller = tours
 tourAction.defaults.action = "show"
 tourAction.reqs.id = "\d+"
 
 tourItemAction.route = "tours/edit/:id/:action/:item"
-tourItemAction.defaults.module = mall-map
+tourItemAction.defaults.module = walking-tour
 tourItemAction.defaults.controller = tours
 tourItemAction.reqs.id = "\d+"
 tourItemAction.reqs.item = "\d+"
 
 oldTour.route = "tour-builder/tours/:action/:id"
-oldTour.defaults.module = mall-map
+oldTour.defaults.module = walking-tour
 oldTour.defaults.controller = tours
 oldTour.defaults.action = "browse"
