update plugin author name

--- a/plugin.ini
+++ b/plugin.ini
@@ -1,6 +1,6 @@
 [info]
 name="Walking Tour"
-author="Alec Wang and Austin Mason"
+author="Alec Wang, Austin Mason, Tingjun Tu, and Alejandro Gonzalez"
 description="A plugin to add walking tours for the Medieval Rome From Reason OCS at Carleton College"
 license="GPLv3"
 link=""
