Changed name order

--- a/plugin.ini
+++ b/plugin.ini
@@ -1,6 +1,6 @@
 [info]
 name="Walking Tour"
-author="Alec Wang, Austin Mason, Tingjun Tu, and Alejandro Gonzalez"
+author="Tingjun Tu, Alejandro González, Alec Wang, and Austin Mason"
 description="Adds the ability to create and display walking tours on a map"
 license="GPLv3"
 link=""
